- fixed all kind off different color overlap cases - if two different colors overlap only delete / select the current color highlight - allow for creating new current color highlights in different color highlights
This was done by always using pointer-events: none for the highlights and implementing a func getHighlightFromPoint that returns a current color Highlight at a given point

--- a/content.css
+++ b/content.css
@@ -25,7 +25,7 @@
   z-index: 0;
   /* mix-blend-mode: multiply; */
   opacity: 0.75;
-  user-select: none;
+  /* user-select: none; */
 }
 
 .cursor {
